コンパイル前に、コンソールをクリアするオプションを追加した。 refs #458

--- a/src/config/mrubyc_ide.ini
+++ b/src/config/mrubyc_ide.ini
@@ -4,9 +4,10 @@ Compiler\MrbcCommand=
 Compiler\MrbcCommandOptions=
 Compiler\CloudEnabled=false
 Compiler\CloudUrl=
+Compiler\ClearConsoleEnabled=true
 Writer\MrbwCommand=
 Writer\MrbwCommandOptions=
-Writer\Port=COM1
+Writer\Port=COM3
 
 [FontAndColors]
 Font\Family=Courier New
