シリアルコンソール機能の追加 refs #454

--- a/src/config/mrubyc_ide.ini
+++ b/src/config/mrubyc_ide.ini
@@ -8,6 +8,7 @@ Compiler\ClearConsoleEnabled=true
 Writer\MrbwCommand=
 Writer\MrbwCommandOptions=
 Writer\Port=COM3
+Writer\BaudRate=
 
 [FontAndColors]
 Font\Family=Courier New
